--- a/index.html
+++ b/index.html
@@ -11,11 +11,46 @@
     </head>
     <body>
         <div id="app">
+            <!-- CONTAINER  -->
             <div id="container" class="debug">
+                <!-- ROW  -->
+                <div class="row w-100 h-100 m-0">
+                    <!-- contacts  -->
+                    <div id="contacs-area" class="h-100 debug p-0 bg-white">
+                        <div id="contacs-header" class="debug ">
+                        </div>
+                        <div id="notifications" class="debug">
+                        </div>
+                        <div id="search" class="debug">
+                        </div>
+                        <div id="contacs-list" class="bg-white">
+                            <ul class="ps-3">
+                                <li v-for="user in contacts" class="list-unstyled debug py-2 d-flex position-relative">
+                                    <div id="user-photo">
+                                        <img :src="`./img/avatar${user.avatar}.jpg`" alt="user.name" class="me-2">
+                                    </div>
+                                    <div id="user-name">
+                                        <h6 class="mb-0">{{user.name}} </h6>
+                                        <span>Ultimo messaggio inviato</span>
+                                    </div>
+                                    <span id="time">12.00</span>
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- chat  -->
+                    <div id="chat-area" class="h-100 debug p-0">
+                        <div id="chat-header" class="debug">
+
+                        </div>
+                    </div>
+
+                </div>
+
+
 
             </div>
-
-
 
         </div>
 
