chat header e chat main

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="container">
                 <!-- ROW  -->
                 <div class="row w-100 h-100 m-0">
-                    <!-- contacts  -->
+                    <!-- CONTACTS  -->
                     <div id="contacts-area" class="h-100  p-0 bg-white">
                         <!-- contacts header  -->
                         <div class="contacts header  d-flex justify-content-between align-items-center">
@@ -66,10 +66,40 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- chat  -->
-                    <div id="chat-area" class="h-100 debug p-0">
-                        <div  class="chat header debug">
 
+                    <!-- CHAT  -->
+                    <div id="chat-area" class="h-100 p-0">
+                        <!-- chat header  -->
+                        <div class="chat header d-flex justify-content-between align-items-center">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="./img/avatar_io.jpg" alt="" class="me-2">
+                                </div>
+                                <div>
+                                    <span class="name">Sofia</span>
+                                    <div class="text-small-grey">Ultimo accesso oggi alle 12:00</div>
+                                </div>
+                            </div>
+                            <div class="icons-list">
+                                <ul class="list-unstyled d-flex m-0 pe-2">
+                                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                                    <li><i class="fa-solid fa-paperclip mx-3"></i></li>
+                                    <li><i class="fa-solid fa-ellipsis-vertical"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- chat main -->
+                        <div id="chat-main">
+                            <div id="conversation" class="h-100">
+
+                            </div>
+
+
+
+                            <!-- send-message  -->
+                            <div id="send-message">
+                                
+                            </div>
                         </div>
                     </div>
 
