--- a/index.html
+++ b/index.html
@@ -98,7 +98,21 @@
 
                             <!-- send-message  -->
                             <div id="send-message">
-                                
+                                <div class="row py-2 px-4 h-100 align-items-center">
+                                    <div class="col flex-grow-0">
+                                        <div id="smile" class="mx-2">
+                                            <i class="fa-regular fa-face-smile"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col flex-grow-1 h-100">
+                                        <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio">
+                                    </div>
+                                    <div class="col flex-grow-0">
+                                        <div id="mic" class="mx-2">
+                                            <i class="fa-solid fa-microphone"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
