--- a/index.html
+++ b/index.html
@@ -89,14 +89,16 @@
                             </div>
                         </div>
                         <!-- chat main -->
-                        <div id="chat-main">
-                            <div id="conversation" class="h-100">
-
+                        <div id="chat-main" class="pt-5">
+                            
+                            <div class="message sent">
+                                ciaociao
+                            </div>
+                            <div class="message received">
+                                ciaociao
                             </div>
 
-
-
-                            <!-- send-message  -->
+                         <!-- send-message  -->
                             <div id="send-message">
                                 <div class="row py-2 px-4 h-100 align-items-center">
                                     <div class="col flex-grow-0">
