--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <!-- contacts list  -->
                         <div id="contacts-list" class="bg-white">
                             <ul class="p-0">
-                                <li v-for="user in contacts" class="list-unstyled py-2 d-flex position-relative">
+                                <li v-for="(user,index) in contacts" class="list-unstyled py-2 d-flex position-relative" @click="chooseChat(index)">
                                     <div id="user-photo" class="ps-3">
                                         <img :src="`./img/avatar${user.avatar}.jpg`" alt="user.name" class="me-2">
                                     </div>
@@ -93,7 +93,7 @@
                             
                             <div v-for="(item,index) in contacts[chatActive].messages" class="message" :class="(item.status ==='sent') ? 'sent' : 'received'">
                                 {{item.message}}
-                                <span class="time-message">{{messageDate(index)}}</span>              
+                                <span class="time-message">{{messageTime(index)}}</span>              
                             </div>
                             
 
