--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div id="search" class="p-1 bg-light">    
                             <nav class="input-group">
                                 <span id="glass" class="input-group-text bg-white h-100 d-flex justify-content-center"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat">
+                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" @keyup.enter="answerMessage">
                             </nav>
 
                         </div>
@@ -106,7 +106,7 @@
                                         </div>
                                     </div>
                                     <div class="col flex-grow-1 h-100">
-                                        <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendMessage">
+                                        <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendMessage" @keyup.enter="answerMessage">
                                     </div>
                                     <div class="col flex-grow-0">
                                         <div id="mic" class="mx-2">
