--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div id="search" class="p-1 bg-light">    
                             <nav class="input-group">
                                 <span id="glass" class="input-group-text bg-white h-100 d-flex justify-content-center"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" @keyup.enter="answerMessage">
+                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" >
                             </nav>
 
                         </div>
@@ -106,7 +106,7 @@
                                         </div>
                                     </div>
                                     <div class="col flex-grow-1 h-100">
-                                        <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendMessage" @keyup.enter="answerMessage">
+                                        <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendMessage();answerMessage()">
                                     </div>
                                     <div class="col flex-grow-0">
                                         <div id="mic" class="mx-2">
@@ -125,7 +125,7 @@
             </div>
 
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.1.1/luxon.js" integrity="sha512-DHvfggcXxUTF6DOS9SKqOW46hefDt/tZQMGnfk4RL7bjsw1vUKJoLYay4VcrSQ6kZbOoq71Eo+Zor7BMK/UxCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@3.0.3/build/global/luxon.min.js"></script>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <script src="./js/main.js"></script>
     </body>
