--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div id="search" class="p-1 bg-light">    
                             <nav class="input-group">
                                 <span id="glass" class="input-group-text bg-white h-100 d-flex justify-content-center"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" >
+                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" @keyup="filterChat" v-model="search">
                             </nav>
 
                         </div>
@@ -73,10 +73,10 @@
                         <div class="chat header d-flex justify-content-between align-items-center">
                             <div class="d-flex">
                                 <div>
-                                    <img src="./img/avatar_io.jpg" alt="" class="me-2">
+                                    <img :src="`./img/avatar${contacts[chatActive].avatar}.jpg`" alt="" class="me-2">
                                 </div>
                                 <div>
-                                    <span class="name">Sofia</span>
+                                    <span class="name">{{contacts[chatActive].name}}</span>
                                     <div class="text-small-grey">Ultimo accesso oggi alle 12:00</div>
                                 </div>
                             </div>
@@ -96,26 +96,26 @@
                                 <span class="time-message">{{messageTime(index)}}</span>              
                             </div>
                             
-
-                         <!-- send-message  -->
-                            <div id="send-message">
-                                <div class="row py-2 px-4 h-100 align-items-center">
-                                    <div class="col flex-grow-0">
-                                        <div id="smile" class="mx-2">
-                                            <i class="fa-regular fa-face-smile"></i>
-                                        </div>
+                        </div>
+                        <!-- send-message  -->
+                        <div id="send-message">
+                            <div class="row py-2 px-4 h-100 align-items-center">
+                                <div class="col flex-grow-0">
+                                    <div id="smile" class="mx-2">
+                                        <i class="fa-regular fa-face-smile"></i>
                                     </div>
-                                    <div class="col flex-grow-1 h-100">
-                                        <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendMessage();answerMessage()">
-                                    </div>
-                                    <div class="col flex-grow-0">
-                                        <div id="mic" class="mx-2">
-                                            <i class="fa-solid fa-microphone"></i>
-                                        </div>
+                                </div>
+                                <div class="col flex-grow-1 h-100">
+                                    <input type="text" class="w-100 h-100 rounded-1 ps-3" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendMessage();answerMessage()">
+                                </div>
+                                <div class="col flex-grow-0">
+                                    <div id="mic" class="mx-2">
+                                        <i class="fa-solid fa-microphone"></i>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
 
                 </div>
