--- a/index.html
+++ b/index.html
@@ -45,23 +45,24 @@
                         <div id="search" class="p-1 bg-light">    
                             <nav class="input-group">
                                 <span id="glass" class="input-group-text bg-white h-100 d-flex justify-content-center"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" @keyup="filterChat" v-model="search">
+                                <input type="text" class="form-control h-100" placeholder="Cerca o inizia una nuova chat" @keyup="filterContacts" v-model="search">
                             </nav>
 
                         </div>
                         <!-- contacts list  -->
                         <div id="contacts-list" class="bg-white">
                             <ul class="p-0">
-                                <li v-for="(user,index) in contacts" class="list-unstyled py-2 d-flex position-relative" @click="chooseChat(index)" :class="(index === chatActive) ? 'backgrey' : ''" >
-                                    <div id="user-photo" class="ps-3">
-                                        <img :src="`./img/avatar${user.avatar}.jpg`" alt="user.name" class="me-2">
+                                <li v-for="(user,index) in contacts" class="list-unstyled" @click="chooseChat(index)" :class="(index === chatActive) ? 'backgrey' : ''">
+                                    <div class="li py-2 d-flex position-relative" v-if="user.visible">
+                                        <div id="user-photo" class="ps-3">
+                                            <img :src="`./img/avatar${user.avatar}.jpg`" alt="user.name" class="me-2">
+                                        </div>
+                                        <div id="user-name">
+                                            <h6 class="mb-0">{{user.name}} </h6>
+                                            <span>Ultimo messaggio inviato</span>
+                                        </div>
+                                        <span id="time">12.00</span>
                                     </div>
-                                    <div id="user-name">
-                                        <h6 class="mb-0">{{user.name}} </h6>
-                                        <span>Ultimo messaggio inviato</span>
-                                    </div>
-                                    <span id="time">12.00</span>
-
                                 </li>
                             </ul>
                         </div>
