visualizzo nella lista delle chat l'ultimo messaggio

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         </div>
                                         <div id="user-name">
                                             <h6 class="mb-0">{{user.name}} </h6>
-                                            <span>Ultimo messaggio inviato</span>
+                                            <span>{{user.messages[user.messages.length - 1].message}}</span>
                                         </div>
                                         <span id="time">12.00</span>
                                     </div>
