visualizzo nella lista chat la data dell'utlimo messaggio

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                             <h6 class="mb-0">{{user.name}} </h6>
                                             <span>{{user.messages[user.messages.length - 1].message}}</span>
                                         </div>
-                                        <span id="time">12.00</span>
+                                        <span id="time">{{user.messages[user.messages.length - 1].date}}</span>
                                     </div>
                                 </li>
                             </ul>
